--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^1.6.1",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "firebase": "^9.1.1",
     "install": "^0.13.0",
     "npm": "^7.20.3",
     "react": "16.13.1",
