--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-bouncy-checkbox": "^2.1.7",
     "react-native-dotenv": "^3.1.1",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "~1.10.2",
@@ -31,7 +32,9 @@
     "react-native-vector-icons": "^8.1.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
-    "tailwind-react-native-classnames": "^1.4.1"
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "tailwind-react-native-classnames": "^1.4.1",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
