--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@reduxjs/toolkit": "^1.6.1",
     "expo": "~42.0.1",
     "expo-status-bar": "~1.0.4",
+    "firebase": "8.2.3",
     "install": "^0.13.0",
+    "lottie-react-native": "^4.1.3",
     "npm": "^7.20.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
