--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "install": "^0.13.0",
+    "intl": "^1.2.5",
     "lottie-react-native": "^4.1.3",
     "npm": "^7.20.3",
     "react": "16.13.1",
